added mouse keybinds for hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -132,3 +132,5 @@ bind=,XF86AudioMute,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind=,XF86MonBrightnessUp,exec,light -A 10
 bind=,XF86MonBrightnessDown,exec,light -U 10
 
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
