added way to change workspace

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -119,8 +119,8 @@ bind=SUPERSHIFT,8,movetoworkspace,8
 bind=SUPERSHIFT,9,movetoworkspace,9
 bind=SUPERSHIFT,0,movetoworkspace,10
 
-bind=SUPER,mouse_down,workspace,e+1
-bind=SUPER,mouse_up,workspace,e-1
+bind=CTRL,right,workspace,e+1
+bind=CTRL,left,workspace,e-1
 
 
 #windowrule = opacity 0.9 0.9,^(foot)$
