--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -174,6 +174,11 @@
     "interval": 1,
     "format": " {}",
     "tooltip": false
+},
+"wlr/workspaces": {
+    "on-click": "activate",
+    "on-scroll-up": "hyprctl dispatch workspace e+1",
+    "on-scroll-down": "hyprctl dispatch workspace e-1"
 }
 }
 
