--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -87,9 +87,9 @@
 	},
 
 	"pulseaudio": {
-		"format": "{icon} {volume:2}%",
+		"format": "<span color=\"#e28c8c\">{icon}</span> {volume:2}%",
 		"format-bluetooth": " {volume}%",
-		"format-muted": "mute",
+		"format-muted": "<span color=\"#e28c8c\">mute</span>",
 		"format-icons": {
 			"headphones": "",
 			"default": [
@@ -99,13 +99,12 @@
 		},
 		"scroll-step": 5,
 		"on-click": "pulsemixer --toggle-mute",
-		//"on-click-right": "pavucontrol",
     "icon-size": 50,
     "tooltip": false
 	},
 	"memory": {
 		"interval": 5,
-		"format": " {used:0.1f}GiB",
+		"format": "<span color=\"#EADDA0\"></span> {used:0.1f}GiB",
     "tooltip": false
 	},
 	"cpu": {
@@ -118,8 +117,8 @@
 			"warning": 30,
 			"critical": 15
 		},
-		"format": "{icon} {capacity}%",
-    "format-alt": "{icon} {time}",
+		"format": "<span color=\"#89b4fa\">{icon}</span> {capacity}%",
+    "format-alt": "<span color=\"#89b4fa\">{icon}</span> {time}",
 		"format-icons": [
       "",
       "",
@@ -136,14 +135,13 @@
 
 	"disk": {
 		"interval": 5,
-		"format": " {used}",
+		"format": "<span color=\"#a4b9ef\"></span> {used}",
 		"path": "/",
     "tooltip": false
 	},
 
 "tray": {
 		"icon-size": 21
-		//"spacing": 10
 	},
 
 "keyboard-state": {
@@ -157,14 +155,14 @@
   },
 "backlight": {
     "device": "intel_backlight",
-    "format": "{icon} {percent}%",
+    "format": "<span color=\"#f7c196\">{icon}</span> {percent}%",
     "format-icons": ["","",""]
 },
 "network": {
     "interface": "wlan0",
-    "format": " {ifname}",
-    "format-wifi": " {essid} ({signalStrength}%)",
-    "format-disconnected": " disconnect",
+    "format": "<span color=\"#C6AAE8\"></span> {ifname}",
+    "format-wifi": "<span color=\"#C6AAE8\"></span> {essid} ({signalStrength}%)",
+    "format-disconnected": "<span color=\"#C6AAE8\"></span> disconnect",
     "format-alt": " {ipaddr}/{cidr}",
     "tooltip": false,
     "max-length": 50
@@ -172,7 +170,7 @@
 "custom/locale": {
     "exec": "~/.config/waybar/layout.sh",
     "interval": 1,
-    "format": " {}",
+    "format": "<span color=\"#9399b2\"></span> {}",
     "tooltip": false
 },
 "wlr/workspaces": {
